--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -413,7 +413,10 @@
       </script>
     {% endif %}
 
-  </body>
-</html>
+    {# Swiper CSS von CDN #}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
+{# <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> #}
+
   </body>
 </html>
