style: css changes and global cleanup

--- a/assets/recently-viewed-products.css
+++ b/assets/recently-viewed-products.css
@@ -1,4 +1,4 @@
-/* assets/recently-viewed-products.css */
+assets/recently-viewed-products.css
 
 /* Basis-Container des Custom Elements, optionales Padding/Margin */
 recently-viewed-products {
